stateDiagram-v2
    [*] --> CREATED
    
    CREATED --> IN_PROGRESS : Send to AI success
    CREATED --> FAILED : Send to AI failure
    CREATED --> CANCELED : Cancel request
    
    FAILED --> IN_PROGRESS : Resume send to AI success
    FAILED --> FAILED : Resume send to AI failure
    FAILED --> CANCELED : Cancel request
    
    IN_PROGRESS --> ERROR : Stream failure
    IN_PROGRESS --> WAITING_FOR_TOOLS : message_stop with tool calls
    IN_PROGRESS --> COMPLETED : message_stop no tools
    IN_PROGRESS --> CANCELED : Cancel request
    
    WAITING_FOR_TOOLS --> IN_PROGRESS : All tools complete send results to AI
    WAITING_FOR_TOOLS --> ERROR : Tool timeout 1 minute
    WAITING_FOR_TOOLS --> CANCELED : Cancel request
    
    ERROR --> IN_PROGRESS : Resume with partial message
    ERROR --> ERROR : Resume send failure
    ERROR --> CANCELED : Cancel request
    
    COMPLETED --> [*]
    FAILED --> [*] 
    ERROR --> [*]
    CANCELED --> [*]
    
    note right of WAITING_FOR_TOOLS
        Wait for all tool_call records to complete
        When ready send results back to AI
        Transition to IN_PROGRESS to continue streaming
        Timeout after 1 minute marks tools as canceled
    end note
    
    note right of CANCELED
        Cancel running tool calls
        Kill background jobs
        Available from any state
    end note
    
    note left of CREATED
        Prompt States
        CREATED FAILED ERROR IN_PROGRESS 
        WAITING_FOR_TOOLS COMPLETED CANCELED
        
        Each prompt linked to
        conversation and message
        
        Tool execution runs async
        Independent of prompt state
    end note